<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    >

    <!-- Home Found -->
	
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:showAsAction="always"
        android:title="@string/action_home"/>

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_action_account"
        android:showAsAction="always"
        android:title="@string/action_account"/>
    
     <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_action_list"
        android:showAsAction="always"
        android:title="@string/action_list"/>
    
    <!-- Refresh -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>

    <!-- Help -->
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"/>

    <!-- Check updates -->
    <item
        android:id="@+id/action_check_updates"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_check_updates"/>
</menu>